--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "eslint": "^8.0.0",
     "jest": "^29.0.0",
+    "tweakpane": "^4.0.5",
     "typescript": "^5.0.0",
     "vite": "^4.0.0"
   },
@@ -49,7 +50,6 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "@base-ui-components/react": "^1.0.0-alpha.6",
-    "@tailwindcss/postcss": "^4.0.9"
+    "@base-ui-components/react": "^1.0.0-alpha.6"
   }
 }
